src/test/deca/syntax/invalid/testClassInMain.deca
// Bad call of a class in the main method
// Result : Error
// mismatched input ';' expecting '('

{
    myClass a = new myClass;
}
